	* src/SDCCopt.c,
	  support/regression/tests/bug-2833.c:
	  Fix bug #2833 (patch by Noam Preil).
	* src/z80/gen.c:
	  Minor improvements in handling on-stack variables.
	* src/SDCCsalloc.hpp,
	  src/SDCCmem.c,
	  src/SDCCmem.h,
	  src/SDCCralloc.hpp,
	  src/z80/ralloc.c,
	  src/z80/ralloc.h,
	  src/z80/ralloc2.cc:
	  New default stack allocator for z80 and related: aligned Chaitin.

2018-11-11 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc.h,
	  src/z80/ralloc.c,
	  src/z80/ralloc2.cc:
	  Refactoring to prepare for alternative stack allocation.

2018-11-08 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* support/regression/tests/bug-2833.c:
	  Test for bug #2833.

2018-11-07 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Improve code generation for some multiplications.
	* sim/ucsim/stm8.src/stm8.cc,
	  sim/ucsim/stm8.src/inst.cc:
	  Improve accuracy of timing in stm8 simulator.
	* src/stm8/peeph.def:
	  Peephole rule to improve shifting via spilled pointers.

2018-11-06 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCopt.c:
	  Apply % to & optimization in a few more cases.

2018-11-05 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* sim/ucsim/cmd.src/cmd_uc.cc,
	  sim/ucsim/sim.src/hw.cc,
	  sim/ucsim/sim.src/serial_hw.cc,
	  sim/ucsim/sim.src/simifcl.h,
	  sdas/linksrc/lklibr.c,
	  src/SDCCerr.c,
	  src/SDCCerr.h:
	  Cherry-pick a few spelling fixes from Debian.

2018-10-29 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Improve code for dummy read.
	* support/regression/tests/gcc-torture-execute-pr38212.c,
	  support/regression/tests/cse.c:
	  Enable tests that no longer fail.

2018-10-29 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.h,
	  src/stm8/gen.c,
	  src/stm8/peep.c,
	  src/stm8/ralloc.c:
	  Support offsets from symbols in rematerialization (RFE #446).

2018-10-26 Philipp Klaus Krause <pkk AT spth.de>

	* src/mcs51/peeph.def:
	  Fix a bug in an mcs51 peephole rule.
